<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:onClick="@{clickListener::onClick}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@string/mobile"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:layout_marginTop="30dp"/>

            <com.org.wvprojectstructure.uihelper.CustomTextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:theme="@style/TextInputLayoutAppearance"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@null"
                app:errorIconDrawable="@null"
                app:errorTextAppearance="@style/error_appearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:fontFamily="@font/sf_pro_text_semibold"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_your_mobile"

                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:maxLength="12"
                    android:padding="10dp"
                    android:paddingStart="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color"
                    android:textSize="17sp"
                    tools:ignore="RtlSymmetry" />
            </com.org.wvprojectstructure.uihelper.CustomTextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@string/password"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:layout_marginTop="25dp"/>

            <com.org.wvprojectstructure.uihelper.CustomTextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:theme="@style/TextInputLayoutAppearance"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@null"
                app:errorIconDrawable="@null"
                app:errorTextAppearance="@style/error_appearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:fontFamily="@font/sf_pro_text_semibold"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_your_password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:padding="10dp"
                    android:paddingStart="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color"
                    android:textSize="17sp"
                    tools:ignore="RtlSymmetry" />
            </com.org.wvprojectstructure.uihelper.CustomTextInputLayout>

            <TextView
                android:id="@+id/loginTV"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:gravity="center"
                android:onClick="@{clickListener::onClick}"
                android:text="@string/login"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
